--- a/plugins/captiveportal/captive.html
+++ b/plugins/captiveportal/captive.html
@@ -14,6 +14,12 @@ body, html {
     background-size: cover;
 }
 
+.center {
+   position: absolute;
+   left: 0;
+   top: 10%;
+   width: 100%;
+}
 
 .button {
     background-color: #4CAF50; /* Green */
@@ -22,12 +28,12 @@ body, html {
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+    display: block;
 }
 
 .button1 {
@@ -44,13 +50,11 @@ body, html {
 </script>
 <body>
 	<div class="bg">
-		<div align="center">
+		<div class="center" align="center">
+		<img src="free-wifi.png" alt="Free Wifi" height="130" width="230">
 		<button class="button button1">CONECTAR COM SUA CONTA DO FACEBOOK</button>
-		<br>
 		<button class="button button1">CONECTAR COM SUA CONTA DO INSTAGRAM</button>
-		<br>
 		<button class="button button1">CONECTAR COM SUA CONTA DO GOOGLE</button>
-		<br>
 		</div>
 	</div>
 </body>
